[package]
name = "light-sdk"
version = "0.2.1"
description = "ZK Compression on Solana"
repository = "https://github.com/Lightprotocol/light-protocol"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "light_sdk"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
custom-heap = ["light-heap"]
mem-profiling = []
default = ["custom-heap"]
test-sbf = []
bench-sbf = []

[dependencies]
aligned-sized = { version = "0.2.1" }
light-macros = { version = "0.4.1" }
anchor-lang = "0.29.0"
bytemuck = "1.16"
light-hasher = { version = "0.2.1" }
light-heap = { version = "0.2.1", optional = true }
account-compression = { version = "0.4.1", features = ["cpi"] }
light-system-program = { version = "0.4.1", features = ["cpi"] }
light-concurrent-merkle-tree = { version = "0.2.1" }
light-utils = { version = "0.2.1" }
groth16-solana = "0.0.3"
light-verifier = { version = "0.2.1", features = ["solana"] }
borsh = "0.10.0"

[target.'cfg(not(target_os = "solana"))'.dependencies]
solana-sdk = "=1.18.11"

[dev-dependencies]
solana-banks-interface = "=1.18.11"
solana-cli-output = "=1.18.11"
solana-program-test = "=1.18.11"
solana-sdk = "=1.18.11"
serde_json = "1.0.114"
reqwest = "0.12"
tokio = "1.38.0"
light-prover-client = { version = "0.2.1" }
light-merkle-tree-reference = { version = "0.2.1" }
light-indexed-merkle-tree = { version = "0.2.1" }
num-bigint = "0.4.6"
num-traits = "0.2.18"
lazy_static = "1.4.0"
light-hash-set = { version = "0.2.1", features = ["solana"] }
rand = "0.8.5"